compiles and (remaining) tests run correctly