@@ -35,7 +35,7 @@
 	<groupId>org.jfxtras</groupId>
 	<artifactId>jfxtras-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>14.0-r1-SNAPSHOT</version>
+	<version>14-r1-SNAPSHOT</version>
 	<name>JFXtras parent</name>
 	<description>Miscellaneous components for JavaFX</description>
 	<licenses>
@@ -155,8 +155,27 @@
 					</dependencies>
 					<configuration>
 				    	<argLine>
-				      		--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-				    	</argLine>
+				      		--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED,org.testfx
+							--add-exports jfxtras.agenda/jfxtras.scene.control.agenda.test=junit
+							--add-exports jfxtras.common/jfxtras.scene.layout.test=junit
+							--add-exports jfxtras.controls/jfxtras.scene.control.test=junit
+							--add-exports jfxtras.controls/jfxtras.scene.control.test=junit
+							--add-exports jfxtras.font.roboto/jfxtras.resources=junit
+							--add-exports jfxtras.gauge.linear/jfxtras.scene.control.gauge.linear=junit
+							--add-exports jfxtras.menu/jfxtras.scene.menu.test=junit
+							--add-exports jfxtras.window/jfxtras.scene.control.window.test=junit
+							--add-exports jfxtras.window/jfxtras.internal.scene.control.skin.window=javafx.controls
+							--add-exports jfxtras.icalendaragenda/jfxtras.scene.control.agenda.icalendar.agenda=junit
+							--add-exports jfxtras.icalendaragenda/jfxtras.scene.control.agenda.icalendar.misc=junit
+							--add-exports jfxtras.icalendaragenda/jfxtras.scene.control.agenda.icalendar.editors.revisor=junit
+							--add-exports jfxtras.icalendaragenda/jfxtras.scene.control.agenda.icalendar.editors.deletor=junit
+							--add-exports jfxtras.icalendaragenda/jfxtras.scene.control.agenda.editors.revisor=junit
+							--add-exports jfxtras.icalendaragenda/jfxtras.scene.control.agenda.editors.deletor=junit
+							--add-exports jfxtras.icalendaragenda/jfxtras.internal.scene.control.skin.agenda.icalendar.base24hour.popup=junit
+							--add-opens jfxtras.icalendaragenda/jfxtras.internal.scene.control.skin.agenda.icalendar.base24hour=javafx.fxml
+							--add-opens jfxtras.icalendaragenda/jfxtras.internal.scene.control.skin.agenda.icalendar.base24hour.popup=javafx.fxml
+
+						</argLine>
 				  	</configuration>
 				</plugin>				
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
